--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,11 +2,13 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   {% if jekyll.environment == 'production' %}
-  <link rel="stylesheet" href="{{ '/assets/css/foundation.min.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/ratchet-v2.0.2/css/ratchet.min.css' | relative_url }}">
   {% else %}
-  <link rel="stylesheet" href="{{ '/assets/css/foundation.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ '/assets/ratchet-v2.0.2/css/ratchet.css' | relative_url }}">
   {% endif %}
 
   <link rel="icon" sizes="192x192" href="{{ '/assets/img/Icon-192.png' | absolute_url }}">
@@ -15,4 +17,10 @@
   <link rel="apple-touch-icon" sizes="76x76" href="{{ '/assets/img/Icon-76.png' | absolute_url }}">
   <link rel="apple-touch-icon" sizes="120x120" href="{{ '/assets/img/Icon-120.png' | absolute_url }}">
   <link rel="apple-touch-icon" sizes="152x152" href="{{ '/assets/img/Icon-152.png' | absolute_url }}">
+  <script src="ratchet.js"></script>
+  {% if jekyll.environment == 'production' %}
+  <script src="{{ '/assets/ratchet-v2.0.2/js/ratchet.min.js' | relative_url }}"></script>
+  {% else %}
+  <script src="{{ '/assets/ratchet-v2.0.2/js/ratchet.js' | relative_url }}"></script>
+  {% endif %}
 </head>
