--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,6 @@
-<div class="top-bar">
-  <div class="top-bar-left">
-    <ul class="dropdown menu" data-dropdown-menu>
-      <li class="menu-text">{{ site.title | escape }}</li>
-      <li><a href="{{ "/" | relative_url}}">Hem</a></li>
-      {% for my_page in site.pages %}
-        {% if my_page.title %}
-        <li>
-          <a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-        </li>
-        {% endif %}
-      {% endfor %}
-    </ul>
-  </div>
-</div>
+<header class="bar bar-nav">
+  {% if page.url != '/' %}
+  <a href="{{ "/" | relative_url}}" class="icon icon-left-nav pull-left" data-transition="slide-out"></a>
+  {% endif %}
+  <h1 class="title">{{ site.title | escape }}</h1>
+</header>
