--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,9 @@
 
   <body>
     {% include header.html %}
-
-    {{ content }}
+    <div class="content">
+      {{ content }}
+    </div>
 
     {% include footer.html %}
   </body>
