--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,10 +1,10 @@
 ---
 layout: default
 ---
-<div class="row">
-  <div class="large-12 columns">
-    {% if page.title %}<h3>{{ page.title | escape }}</h3>{% endif %}
-
-    {{ content }}
-  </div>
+{% if page.title %}
+<div class="content-padded">
+  <h3>{{ page.title | escape }}</h3>
 </div>
+{% endif %}
+
+{{ content }}
